--- a/content/themes/basis_child/style.css
+++ b/content/themes/basis_child/style.css
@@ -17,3 +17,16 @@ code {
 	background: #ededed;
 	border: 1px solid #ddd;
 }
+
+body {
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-delay: 0.1s;
+}
+
+@-webkit-keyframes fontfix{
+    from{ opacity: 1; }
+    to{ toopacity: 1; }
+}
