Update Make to 1.4.2

--- a/content/themes/make/style.css
+++ b/content/themes/make/style.css
@@ -4,7 +4,7 @@
  * Author:      The Theme Foundry
  * Author URI:  https://thethemefoundry.com
  * Description: Create your website without touching a line of code. Make's flexible customization features and a powerful drag and drop page builder make designing your site fun and easy. Build almost anything: a simple portfolio or photography site, an ecommerce business site, a minimalist blog, or even a professional magazine. You'll start by customizing your background, layouts, fonts, colors, and logo. Next, add and organize your content using the drag and drop page builder. Add a photo, a video, a gallery, or even a slider to any page on your website. Make is responsive, so your website will naturally look great on phones, tablets, and desktop screens. It's also fully compatible with popular plugins like WooCommerce, Gravity Forms, Contact Form 7, Jetpack, and WP PageNavi.
- * Version:     1.3.0
+ * Version:     1.4.2
  * License:     GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: make
@@ -242,7 +242,7 @@ pre, code, input, textarea {
 /*---------------------------------------------------------
  Base (_scaffolding.scss)
 -------------------------------------------------------- */
-ul, ol, dl, p, details, address, .vcard, figure, pre, fieldset, table, dt, dd, hr, .ttfmake-alert {
+ul, ol, dl, p, details, address, .vcard, figure, pre, fieldset, table, dt, dd, hr, .ttfmake-alert, .ttfmake-notice {
 	margin-bottom: 22px;
 	margin-bottom: 2.2rem; }
 
@@ -1130,8 +1130,17 @@ Galleries (_elements.scss)
 	display: none; }
 
 /*---------------------------------------------------------
-Alerts (_elements.scss)
+Notices / Alerts (_elements.scss)
 -------------------------------------------------------- */
+.ttfmake-notice {
+	padding: 10px 20px; 
+	color: #808080;
+	border: 2px solid #808080;
+	background: #e5e5e5;}
+.ttfmake-notice p:last-of-type {
+	margin-bottom: 0; }
+
+/* Deprecated in 1.4.1 */
 .ttfmake-alert {
 	font-size: 14px;
 	font-size: 1.4rem;
@@ -1157,6 +1166,8 @@ Alerts (_elements.scss)
 	display: block;
 	content: "\f05a";
 	opacity: .1;}
+.ttfmake-alert p:last-of-type {
+	margin-bottom: 0; }
 .ttfmake-alert.ttfmake-error {
 	color: #d04242;
 	border: 1px solid #dfbaba;
