--- a/content/themes/twentyfifteen/style.css
+++ b/content/themes/twentyfifteen/style.css
@@ -1155,23 +1155,31 @@ a:focus {
 	width: 1px;
 }
 
-.screen-reader-text:hover,
-.screen-reader-text:focus {
+/* must have higher specificity than alternative color schemes inline styles */
+.site .skip-link {
 	background-color: #f1f1f1;
-	border-radius: 0;
 	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
-	clip: auto;
 	color: #21759b;
 	display: block;
-	font: bold 14px/normal "Open Sans", sans-serif;
-	height: auto;
+	font: bold 14px/normal "Noto Sans", sans-serif;
+	left: -9999em;
 	outline: none;
 	padding: 15px 23px 14px;
-	position: absolute;
-	top: 5px;
-	left: 5px;
 	text-decoration: none;
 	text-transform: none;
+	top: -9999em;
+}
+
+.logged-in .site .skip-link {
+	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+	font: bold 14px/normal "Open Sans", sans-serif;
+}
+
+.site .skip-link:focus {
+	clip: auto;
+	height: auto;
+	left: 6px;
+	top: 7px;
 	width: auto;
 	z-index: 100000;
 }
@@ -2137,8 +2145,9 @@ a.post-thumbnail:focus {
 
 .comment-author .avatar {
 	border-radius: 50%;
+	float: left;
 	height: 24px;
-	margin-right: 0.4em;
+	margin-right: 0.8em;
 	width: 24px;
 }
 
@@ -2857,7 +2866,7 @@ span > video {
 	}
 
 	blockquote.alignleft,
-	.wp-caption.alignleft
+	.wp-caption.alignleft,
 	img.alignleft {
 		margin: 0.4118em 1.6471em 1.6471em 0;
 	}
@@ -3210,20 +3219,14 @@ span > video {
 
 	.comment-author {
 		margin-bottom: 0;
-		padding-left: 4.1176em;
 	}
 
 	.comment-author .avatar {
 		height: 42px;
-		margin: 0;
-		position: absolute;
-		top: 3px;
-		left: 0;
+		margin-right: 1.64705em;
+		position: relative;
+		top: 5px;
 		width: 42px;
-	}
-
-	.comment-metadata {
-		padding-left: 5em;
 	}
 
 	.comment-metadata .edit-link a:before {
@@ -3456,7 +3459,7 @@ span > video {
 	}
 
 	blockquote.alignleft,
-	.wp-caption.alignleft
+	.wp-caption.alignleft,
 	img.alignleft {
 		margin: 0.4211em 1.6842em 1.6842em 0;
 	}
@@ -3740,18 +3743,15 @@ span > video {
 		padding-left: 1.4737em;
 	}
 
-	.comment-author {
-		padding-left: 4.6315em;
-	}
-
 	.comment-author .avatar {
 		height: 56px;
+		margin-right: 1.6842em;
+		top: 3px;
 		width: 56px;
 	}
 
 	.comment-metadata {
 		line-height: 2;
-		padding-left: 5.5em;
 	}
 
 	.comment-metadata .edit-link a:before {
@@ -4153,6 +4153,8 @@ span > video {
 	.widget input[type="button"],
 	.widget input[type="reset"],
 	.widget input[type="submit"] {
+		font-size: 12px;
+		font-size: 1.2rem;
 		padding: 0.5417em 1.0833em;
 	}
 
@@ -4406,18 +4408,13 @@ span > video {
 
 	.comment-author {
 		margin-bottom: 0.4em;
-		padding-left: 0;
 	}
 
 	.comment-author .avatar {
 		height: 24px;
-		margin-right: 0.4em;
-		position: static;
+		margin-right: 0.8em;
+		top: 0;
 		width: 24px;
-	}
-
-	.comment-metadata {
-		padding-left: 0;
 	}
 
 	.comment-metadata .edit-link a:before {
@@ -4656,7 +4653,7 @@ span > video {
 	}
 
 	blockquote.alignleft,
-	.wp-caption.alignleft
+	.wp-caption.alignleft,
 	img.alignleft {
 		margin: 0.4118em 1.6471em 1.6471em 0;
 	}
@@ -4923,25 +4920,18 @@ span > video {
 
 	.comment-author {
 		margin-bottom: 0;
-		padding-left: 4.1176em;
 	}
 
 	.comment-author .avatar {
 		height: 42px;
-		margin: 0;
-		position: absolute;
-		top: 3px;
-		left: 0;
+		margin-right: 1.64705em;
+		top: 5px;
 		width: 42px;
 	}
 
 	.bypostauthor > article .fn:after {
 		top: 7px;
 		left: 6px;
-	}
-
-	.comment-metadata {
-		padding-left: 5em;
 	}
 
 	.comment-metadata .edit-link a:before {
@@ -5163,7 +5153,7 @@ span > video {
 	}
 
 	blockquote.alignleft,
-	.wp-caption.alignleft
+	.wp-caption.alignleft,
 	img.alignleft {
 		margin: 0.4211em 1.6842em 1.6842em 0;
 	}
@@ -5439,21 +5429,15 @@ span > video {
 		padding-left: 1.4737em;
 	}
 
-	.comment-author {
-		padding-left: 4.6315em;
-	}
-
 	.comment-author .avatar {
 		height: 56px;
+		margin-right: 1.6842em;
+		top: 3px;
 		width: 56px;
 	}
 
 	.bypostauthor > article .fn:after {
 		top: 8px;
-	}
-
-	.comment-metadata {
-		padding-left: 5.5em;
 	}
 
 	.comment-metadata .edit-link a:before {
