Update TwentyFifteen theme

--- a/content/themes/twentyfifteen/css/ie.css
+++ b/content/themes/twentyfifteen/css/ie.css
@@ -34,6 +34,11 @@ ol {
 	margin-left: 0;
 }
 
+li > ul,
+li > ol {
+	margin-left: 1.3333em;
+}
+
 blockquote {
 	border-color: inherit;
 	border-style: solid;
@@ -107,8 +112,8 @@ textarea {
 }
 
 .main-navigation ul ul {
-	border-top: 0;
 	border-bottom: 0;
+	border-top: 0;
 	margin-left: 1em;
 }
 
@@ -125,10 +130,6 @@ textarea {
 	font-size: 13px;
 	line-height: 1.8462;
 	margin-top: 0;
-}
-
-.dropdown-toggle {
-	margin-top: -21px;
 }
 
 .social-navigation {
@@ -291,9 +292,9 @@ img.aligncenter {
 .site-description {
 	background-color: inherit;
 	display: block;
+	filter: alpha(opacity=70);
 	font-size: 16px;
 	margin: 0.5em 7.6897% 7.6897%;
-	filter: alpha(opacity=70);
 }
 
 .widget-area {
@@ -548,9 +549,7 @@ img.aligncenter {
 	top: 4px;
 }
 
-.updated,
-.sticky .posted-on,
-.sticky .posted-on + .byline:before {
+.updated {
 	display: none;
 }
 
@@ -662,7 +661,12 @@ img.aligncenter {
 
 .comment-content ul,
 .comment-content ol {
-	margin-bottom: 1.6842em;
+	margin: 0 0 1.6842em 0;
+}
+
+.comment-content li > ul,
+.comment-content li > ol {
+	margin-left: 1.3333em;
 }
 
 .comment-list .reply a {
@@ -757,6 +761,12 @@ video {
 .rtl ul,
 .rtl ol {
 	margin-right: 0;
+	margin-left: auto;
+}
+
+.rtl li > ul,
+.rtl li > ol {
+	margin-right: 1.3333em;
 	margin-left: auto;
 }
 
@@ -857,6 +867,18 @@ video {
 .rtl .comment-author .avatar {
 	right: 0;
 	left: auto;
+}
+
+.rtl .comment-content ul,
+.rtl .comment-content ol {
+	margin-right: 0;
+	margin-left: auto;
+}
+
+.rtl .comment-content li > ul,
+.rtl .comment-content li > ol {
+	margin-right: 1.3333em;
+	margin-left: auto;
 }
 
 .rtl .comment-metadata {
