--- a/content/themes/twentyfifteen/style.css
+++ b/content/themes/twentyfifteen/style.css
@@ -151,7 +151,6 @@ a:active {
 
 a img {
 	border: 0;
-	display: block;
 }
 
 
@@ -693,7 +692,6 @@ a:focus {
 .main-navigation .menu-item-description {
 	color: #707070;
 	color: rgba(51, 51, 51, 0.7);
-	display: block;
 	font-family: "Noto Sans", sans-serif;
 	font-size: 12px;
 	font-size: 1.2rem;
@@ -1027,14 +1025,18 @@ a:focus {
 	text-align: center;
 }
 
-.pagination .meta-nav {
-	margin-right: 0.3333em;
+/* reset screen-reader-text */
+.pagination .current .screen-reader-text {
+	position: static !important;
 }
 
 .pagination .page-numbers {
 	display: none;
 	line-height: 3.2em;
 	padding: 0 0.6667em;
+}
+
+.pagination .page-numbers.current {
 	text-transform: uppercase;
 }
 
@@ -1757,6 +1759,13 @@ a.post-thumbnail:focus {
 	border-bottom: 0;
 }
 
+.entry-content a img,
+.entry-summary a img,
+.page-content a img,
+.comment-content a img {
+	display: block;
+}
+
 .entry-content .more-link,
 .entry-summary .more-link:after {
 	white-space: nowrap;
@@ -2018,7 +2027,7 @@ a.post-thumbnail:focus {
 .page-links {
 	clear: both;
 	font-family: "Noto Sans", sans-serif;
-	margin: 0 0 1.4667em;
+	margin-bottom: 1.3333em;
 }
 
 .page-links a,
@@ -2030,7 +2039,7 @@ a.post-thumbnail:focus {
 	font-size: 1.2rem;
 	height: 2em;
 	line-height: 2;
-	margin: 0 1px 2px 0;
+	margin: 0 0.3333em 0.3333em 0;
 	text-align: center;
 	width: 2em;
 }
@@ -2441,6 +2450,7 @@ object,
 video {
 	margin-bottom: 1.6em;
 	max-width: 100%;
+	vertical-align: middle;
 }
 
 p > embed,
@@ -2633,7 +2643,7 @@ span > video {
 	}
 
 	.secondary {
-		margin: 0 7.6923%;
+		margin: 7.6923% 7.6923% 0;
 		padding: 7.6923% 7.6923% 0;
 	}
 
@@ -2748,12 +2758,13 @@ span > video {
 		padding: 0;
 	}
 
-	.pagination .page-numbers {
-		display: inline-block;
+	/* restore screen-reader-text */
+	.pagination .current .screen-reader-text {
+		position: absolute !important;
 	}
 
-	.pagination .meta-nav {
-		display: none;
+	.pagination .page-numbers {
+		display: inline-block;
 	}
 
 	.image-navigation {
@@ -3255,7 +3266,12 @@ span > video {
 	}
 
 	.page-links {
-		margin-bottom: 1.5294em;
+		margin-bottom: 1.4117em;
+	}
+
+	.page-links a,
+	.page-links > span {
+		margin: 0 0.2857em 0.2857em 0;
 	}
 
 	.entry-attachment {
@@ -3786,7 +3802,12 @@ span > video {
 	}
 
 	.page-links {
-		margin-bottom: 1.5789em;
+		margin-bottom: 1.4736em;
+	}
+
+	.page-links a,
+	.page-links > span {
+		margin: 0 0.25em 0.25em 0;
 	}
 
 	.entry-attachment {
@@ -4441,7 +4462,12 @@ span > video {
 	}
 
 	.page-links {
-		margin-bottom: 1.4667em;
+		margin-bottom: 1.3333em;
+	}
+
+	.page-links a,
+	.page-links > span {
+		margin: 0 0.3333em 0.3333em 0;
 	}
 
 	.entry-attachment {
@@ -4959,7 +4985,12 @@ span > video {
 	}
 
 	.page-links {
-		margin-bottom: 1.5294em;
+		margin-bottom: 1.4117em;
+	}
+
+	.page-links a,
+	.page-links > span {
+		margin: 0 0.2857em 0.2857em 0;
 	}
 
 	.entry-attachment {
@@ -5472,7 +5503,12 @@ span > video {
 	}
 
 	.page-links {
-		margin-bottom: 1.5789em;
+		margin-bottom: 1.4736em;
+	}
+
+	.page-links a,
+	.page-links > span {
+		margin: 0 0.25em 0.25em 0;
 	}
 
 	.entry-attachment {
