--- a/content/themes/twentyfifteen/rtl.css
+++ b/content/themes/twentyfifteen/rtl.css
@@ -4,7 +4,7 @@ Description: Adds support for languages written in a Right To Left (RTL) directi
 It's easy, just a matter of overwriting all the horizontal positioning attributes
 of your CSS stylesheet in a separate stylesheet file named rtl.css.
 
-See http://codex.wordpress.org/Right_to_Left_Language_Support
+See: https://codex.wordpress.org/Right_to_Left_Language_Support
 */
 
 /**
@@ -40,10 +40,6 @@ See http://codex.wordpress.org/Right_to_Left_Language_Support
 body {
 	direction: rtl;
 	unicode-bidi: embed;
-}
-
-a {
-	display: inline-block;
 }
 
 caption,
@@ -260,18 +256,6 @@ img.alignleft {
 
 .entry-content .more-link:after {
 	content: "\f430";
-}
-
-.entry-content a,
-.entry-summary a,
-.page-content a,
-.comment-content a {
-	display: inline;
-}
-
-.entry-content .page-links a,
-.page-content .page-links a {
-	display: inline-block;
 }
 
 .author-link:after {
