--- a/content/themes/twentyfifteen/style.css
+++ b/content/themes/twentyfifteen/style.css
@@ -406,6 +406,7 @@ table {
 	border-spacing: 0;
 	border-width: 1px 0 0 1px;
 	margin: 0 0 1.6em;
+	table-layout: fixed; /* Prevents HTML tables from becoming too wide */
 	width: 100%;
 }
 
@@ -905,7 +906,7 @@ a:focus {
 	background-color: transparent;
 	border: 1px solid #eaeaea;
 	border: 1px solid rgba(51, 51, 51, 0.1);
-	height: 48px;
+	height: 42px;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
@@ -915,13 +916,13 @@ a:focus {
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
-	width: 48px;
+	width: 42px;
 }
 
 .secondary-toggle:before {
 	color: #333;
 	content: "\f419";
-	line-height: 48px;
+	line-height: 42px;
 	position: relative;
 	top: -1px;
 	left: 0;
@@ -1016,7 +1017,6 @@ a:focus {
 	background-color: #fff;
 	border-top: 1px solid rgba(51, 51, 51, 0.1);
 	font-family: "Noto Sans", sans-serif;
-	overflow: hidden;
 }
 
 .pagination .nav-links {
@@ -1047,6 +1047,7 @@ a:focus {
 
 .pagination .prev,
 .pagination .next {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0.3);
 	background-color: #333;
 	color: #fff;
 	display: inline-block;
@@ -1172,6 +1173,7 @@ a:focus {
  */
 
 /* Text meant only for screen readers */
+.says,
 .screen-reader-text {
 	clip: rect(1px, 1px, 1px, 1px);
 	height: 1px;
@@ -1417,6 +1419,7 @@ img.aligncenter {
 }
 
 .widget_calendar tbody a {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0.3);
 	background-color: #333;
 	color: #fff;
 	display: block;
@@ -1787,7 +1790,6 @@ a.post-thumbnail:focus {
 }
 
 .author-info .avatar {
-	border-radius: 50%;
 	float: left;
 	height: 36px;
 	margin: 0 1.6em 1.6em 0;
@@ -2045,6 +2047,7 @@ a.post-thumbnail:focus {
 }
 
 .page-links a {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0.3);
 	background-color: #333;
 	border-color: #333;
 	color: #fff;
@@ -2210,15 +2213,10 @@ a.post-thumbnail:focus {
 }
 
 .comment-author .avatar {
-	border-radius: 50%;
 	float: left;
 	height: 24px;
 	margin-right: 0.8em;
 	width: 24px;
-}
-
-.says {
-	display: none;
 }
 
 .bypostauthor > article .fn:after {
@@ -2431,6 +2429,10 @@ a.post-thumbnail:focus {
  * 14.0 Media
  */
 
+.site .avatar {
+	border-radius: 50%;
+}
+
 .page-content img.wp-smiley,
 .entry-content img.wp-smiley,
 .comment-content img.wp-smiley {
@@ -2618,7 +2620,9 @@ span > video {
 	}
 
 	li > ul,
-	li > ol {
+	li > ol,
+	blockquote > ul,
+	blockquote > ol {
 		margin-left: 1.3333em;
 	}
 
@@ -2785,7 +2789,9 @@ span > video {
 	}
 
 	.comment-content li > ul,
-	.comment-content li > ol {
+	.comment-content li > ol,
+	.comment-content blockquote > ul,
+	.comment-content blockquote > ol {
 		margin-left: 1.3333em;
 	}
 }
@@ -3918,18 +3924,6 @@ span > video {
  */
 
 @media screen and (min-width: 59.6875em) {
-	body:before,
-	.sidebar-fixed .site-header,
-	.sidebar-fixed .main-navigation,
-	.sidebar-fixed .social-navigation,
-	.sidebar-fixed .widget {
-		-webkit-transform: translateZ(0); /* Fixes flashing bug with scrolling on iOS Safari */
-	}
-
-	.sidebar-fixed .sidebar {
-		position: fixed;
-	}
-
 	body:before {
 		background-color: #fff;
 		box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
@@ -3941,6 +3935,7 @@ span > video {
 		top: 0;
 		left: 0;
 		width: 29.4118%;
+		z-index: 0; /* Fixes flashing bug with scrolling on Safari */
 	}
 
 	.site {
