--- a/content/themes/twentyfifteen/style.css
+++ b/content/themes/twentyfifteen/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wordpress.org/themes/twentyfifteen
 Author: the WordPress team
 Author URI: https://wordpress.org/
 Description: Our 2015 default theme is clean, blog-focused, and designed for clarity. Twenty Fifteen's simple, straightforward typography is readable on a wide variety of screen sizes, and suitable for multiple languages. We designed it using a mobile-first approach, meaning your content takes center-stage, regardless of whether your visitors arrive by smartphone, tablet, laptop, or desktop computer.
-Version: 0.1
+Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: black, blue, gray, pink, purple, white, yellow, dark, light, two-columns, left-sidebar, fixed-layout, responsive-layout, accessibility-ready, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, microformats, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready
@@ -558,6 +558,7 @@ input[type="search"] {
 	-webkit-appearance: textfield;
 }
 
+input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
@@ -618,6 +619,11 @@ textarea:focus {
 
 input[type="checkbox"],
 input[type="radio"] {
+	padding: 0;
+}
+
+.search-form input[type="submit"],
+.widget .search-form input[type="submit"] {
 	padding: 0;
 }
 
@@ -768,9 +774,8 @@ a:focus {
 }
 
 .social-navigation a:before {
-	content: "\f446";
+	content: "\f415";
 	font-size: 24px;
-	opacity: 0.3;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -778,128 +783,103 @@ a:focus {
 
 .social-navigation a[href$="/feed/"]:before {
 	content: "\f413";
-	opacity: 1;
 }
 
 .social-navigation a[href*="codepen.io"]:before {
 	content: "\f216";
-	opacity: 1;
 }
 
 .social-navigation a[href*="digg.com"]:before {
 	content: "\f221";
-	opacity: 1;
 }
 
 .social-navigation a[href*="dribbble.com"]:before {
 	content: "\f201";
-	opacity: 1;
 }
 
 .social-navigation a[href*="dropbox.com"]:before {
 	content: "\f225";
-	opacity: 1;
 }
 
 .social-navigation a[href*="facebook.com"]:before {
 	content: "\f203";
-	opacity: 1;
 }
 
 .social-navigation a[href*="flickr.com"]:before {
 	content: "\f211";
-	opacity: 1;
 }
 
 .social-navigation a[href*="foursquare.com"]:before {
 	content: "\f226";
-	opacity: 1;
 }
 
 .social-navigation a[href*="plus.google.com"]:before {
 	content: "\f206";
-	opacity: 1;
 }
 
 .social-navigation a[href*="github.com"]:before {
 	content: "\f200";
-	opacity: 1;
 }
 
 .social-navigation a[href*="instagram.com"]:before {
 	content: "\f215";
-	opacity: 1;
 }
 
 .social-navigation a[href*="linkedin.com"]:before {
 	content: "\f208";
-	opacity: 1;
 }
 
 .social-navigation a[href*="pinterest.com"]:before {
 	content: "\f210";
-	opacity: 1;
 }
 
 .social-navigation a[href*="getpocket.com"]:before {
 	content: "\f224";
-	opacity: 1;
 }
 
 .social-navigation a[href*="polldaddy.com"]:before {
 	content: "\f217";
-	opacity: 1;
 }
 
 .social-navigation a[href*="reddit.com"]:before {
 	content: "\f222";
-	opacity: 1;
 }
 
 .social-navigation a[href*="stumbleupon.com"]:before {
 	content: "\f223";
-	opacity: 1;
 }
 
 .social-navigation a[href*="tumblr.com"]:before {
 	content: "\f214";
-	opacity: 1;
 }
 
 .social-navigation a[href*="twitter.com"]:before {
 	content: "\f202";
-	opacity: 1;
 }
 
 .social-navigation a[href*="vimeo.com"]:before {
 	content: "\f212";
-	opacity: 1;
 }
 
 .social-navigation a[href*="wordpress.com"]:before,
 .social-navigation a[href*="wordpress.org"]:before {
 	content: "\f205";
-	opacity: 1;
 }
 
 .social-navigation a[href*="youtube.com"]:before {
 	content: "\f213";
-	opacity: 1;
 }
 
 .social-navigation a[href*="mailto:"]:before {
 	content: "\f410";
-	opacity: 1;
 }
 
 .social-navigation a[href*="spotify.com"]:before {
 	content: "\f515";
-	opacity: 1;
 }
 
 .social-navigation a[href*="twitch.tv"]:before {
 	content: "\f516";
-	opacity: 1;
 }
 
 .secondary-toggle {
@@ -922,10 +902,8 @@ a:focus {
 .secondary-toggle:before {
 	color: #333;
 	content: "\f419";
-	line-height: 42px;
-	position: relative;
-	top: -1px;
-	left: 0;
+	line-height: 40px;
+	width: 40px;
 }
 
 .secondary-toggle:hover,
@@ -939,7 +917,8 @@ a:focus {
 .secondary-toggle.toggled-on:before {
 	content: "\f405";
 	font-size: 32px;
-	top: 0;
+	position: relative;
+	top: 1px;
 	left: -1px;
 }
 
@@ -1862,6 +1841,7 @@ a.post-thumbnail:focus {
 }
 
 .entry-footer a {
+	border-bottom: 1px solid transparent;
 	color: #707070;
 	color: rgba(51, 51, 51, 0.7);
 }
@@ -2196,11 +2176,6 @@ a.post-thumbnail:focus {
 	padding-left: 0.8em;
 }
 
-.comment-list .children article {
-	border-color: #f5f5f5;
-	border-color: rgba(51, 51, 51, 0.05);
-}
-
 .comment-author {
 	color: #707070;
 	color: rgba(51, 51, 51, 0.7);
@@ -2243,7 +2218,7 @@ a.post-thumbnail:focus {
 }
 
 .comment-metadata a:hover,
-.pingback .edit-link a:hover{
+.pingback .edit-link a:hover {
 	border-bottom: 1px solid #333;
 }
 
@@ -2354,8 +2329,8 @@ a.post-thumbnail:focus {
 .no-comments {
 	border-top: 1px solid #eaeaea;
 	border-top: 1px solid rgba(51, 51, 51, 0.1);
-	color: rgba(51, 51, 51, 0.7);
 	color: #707070;
+	color: rgba(51, 51, 51, 0.7);
 	font-family: "Noto Sans", sans-serif;
 	font-weight: 700;
 	padding-top: 1.6em;
@@ -2459,13 +2434,8 @@ video {
 p > embed,
 p > iframe,
 p > object,
-p > video,
-span > embed,
-span > iframe,
-span > object,
-span > video {
+p > video {
 	margin-bottom: 0;
-	max-width: 100%;
 }
 
 .wp-audio-shortcode,
@@ -2912,7 +2882,8 @@ span > video {
 	}
 
 	.secondary-toggle:before {
-		line-height: 56px;
+		line-height: 54px;
+		width: 54px;
 	}
 
 	.post-password-form label,
@@ -3504,7 +3475,8 @@ span > video {
 	}
 
 	.secondary-toggle:before {
-		line-height: 64px;
+		line-height: 62px;
+		width: 62px;
 	}
 
 	.post-password-form label,
@@ -3530,12 +3502,6 @@ span > video {
 	.entry-caption {
 		font-size: 16px;
 		font-size: 1.6rem;
-	}
-
-	.post-navigation .post-title {
-		font-size: 24px;
-		font-size: 2.4rem;
-		line-height: 1.1667;
 	}
 
 	.pagination .nav-links {
