--- a/content/plugins/press-this/css/press-this.css
+++ b/content/plugins/press-this/css/press-this.css
@@ -444,83 +444,6 @@ big {
   font-size: 125%;
 }
 
-.dashicons-bundle {
-  display: none;
-}
-
-.dashicons {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  fill: #79838c;
-  vertical-align: middle;
-}
-.dashicons svg {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.dashicons-admin-links {
-  background: url(../images/icons/png/admin-links.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-camera {
-  background: url(../images/icons/png/camera.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-edit {
-  background: url(../images/icons/png/edit.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-editor-bold {
-  background: url(../images/icons/png/editor-bold.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-editor-italic {
-  background: url(../images/icons/png/editor-italic.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-editor-quote {
-  background: url(../images/icons/png/editor-quote.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-editor-ul {
-  background: url(../images/icons/png/editor-ul.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-editor-unlink {
-  background: url(../images/icons/png/editor-unlink.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-images-alt2 {
-  background: url(../images/icons/png/images-alt2.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-no {
-  background: url(../images/icons/png/no.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-plus {
-  background: url(../images/icons/png/plus.png) no-repeat center center;
-  background: none, none;
-}
-
-.dashicons-wordpress-alt {
-  background: url(../images/icons/png/wordpress-alt.png) no-repeat center center;
-  background: none, none;
-}
-
 .button--secondary, .scan__submit, .button--primary, .button--subtle {
   display: inline-block;
   margin: 0;
@@ -591,28 +514,20 @@ big {
   border: 0;
 }
 
-.icon-button--dark {
+a.icon-button--dark {
   padding: 8px;
-  width: 36px;
-  height: 36px;
+  width: auto;
+  height: auto;
   border-radius: 3px;
   background: rgba(61, 62, 63, 0.9);
-  fill: #e5e5e5;
+  color: #e5e5e5;
   overflow: visible;
 }
-.icon-button--dark:visited {
-  fill: #e5e5e5;
+a.icon-button--dark:visited {
+  color: #e5e5e5;
 }
-.icon-button--dark:focus, .icon-button--dark:hover, .icon-button--dark:active {
-  fill: #fff;
-}
-.icon-button--dark:before {
-  content: '';
-  position: absolute;
-  top: -4px;
-  right: -4px;
-  bottom: -4px;
-  left: -4px;
+a.icon-button--dark:focus, a.icon-button--dark:hover, a.icon-button--dark:active {
+  color: #fff;
 }
 
 button,
@@ -871,9 +786,11 @@ body:before {
 
 .editor {
   padding: 0 1.5em 0;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
+}
+@media (max-width: 320px) {
+  .editor {
+    padding: 0;
+  }
 }
 
 .editor--content {
@@ -885,16 +802,11 @@ body:before {
   }
 }
 
-[contenteditable] {
-  outline: 0;
-}
-
 .post__title {
   margin: 0;
   padding: .83em 0;
   border-bottom: 1px solid #e5e5e5;
   line-height: 1.4;
-  margin-bottom: 0.8em;
 }
 @media (max-width: 320px) {
   .post__title {
@@ -1007,11 +919,6 @@ body:before {
   background: #f1f1f1;
   background: rgba(241, 241, 241, 0.9);
   border-top: 1px solid #e5e5e5;
-  padding: 14px 30px;
-}
-
-.actions input[type="submit"] {
-	float: right;
 }
 
 .add-media {
@@ -1030,6 +937,11 @@ body:before {
   margin: 14px 30px 14px 0;
   font-size: 0;
 }
+@media (max-width: 320px) {
+  .post-actions {
+    margin: 10px 10px 10px 0;
+  }
+}
 
 .adminbar {
   position: fixed;
@@ -1043,7 +955,7 @@ body:before {
   z-index: 9999;
 }
 .adminbar .dashicons {
-  fill: #999;
+  color: #999;
 }
 @media (max-width: 320px) {
   .adminbar {
@@ -1054,7 +966,7 @@ body:before {
     border-bottom: 1px solid #e5e5e5;
   }
   .adminbar .dashicons-wordpress-alt {
-    fill: #2ea2cc;
+    color: #2ea2cc;
   }
 }
 
@@ -1092,10 +1004,11 @@ body:before {
 }
 .current-site .dashicons-wordpress-alt {
   position: relative;
-  top: -2px;
+  top: -1px;
   margin-right: 10px;
   background: url(../images/icons/png/wordpress-alt-white.png) no-repeat center center;
   background: none, none;
+  vertical-align: middle;
 }
 
 .site-list {
@@ -1138,6 +1051,81 @@ body:before {
 }
 .add-site__submit .dashicons-plus {
   display: block;
+}
+
+.wp-editor-wrap .wp-media-buttons {
+  float: none;
+}
+.wp-editor-wrap .button.add_media {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 63px;
+  height: 58px;
+  z-index: 2;
+  margin: 0;
+  padding: 11px;
+  border: 0;
+  border-right: 1px solid #e5e5e5;
+  border-radius: 0;
+  background: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  overflow: hidden;
+}
+@media (max-width: 320px) {
+  .wp-editor-wrap .button.add_media {
+    width: 55px;
+    height: 50px;
+    padding: 7px;
+  }
+}
+.wp-editor-wrap .button.add_media:hover, .wp-editor-wrap .button.add_media:focus, .wp-editor-wrap .button.add_media:active {
+  position: fixed;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  background: none;
+  border-color: #e5e5e5;
+  color: #222;
+}
+.wp-editor-wrap .button.add_media .wp-media-buttons-icon {
+  width: auto;
+  height: auto;
+  margin: 0 20px 0 0;
+}
+.wp-editor-wrap .button.add_media .wp-media-buttons-icon:before {
+  font-size: 40px;
+  content: '\f306';
+}
+.wp-editor-wrap div.mce-toolbar-grp {
+  margin-bottom: 2.14286em;
+  padding: 0.71429em 0;
+  background: none;
+  border-color: #e5e5e5;
+}
+
+.mce-stack-layout:before, .mce-stack-layout:after {
+  content: "";
+  display: table;
+}
+.mce-stack-layout:after {
+  clear: both;
+}
+
+.mce-container.mce-toolbar {
+  float: left;
+}
+.mce-container.mce-toolbar:nth-child(2) {
+  float: right;
+}
+
+@media (max-width: 600px) {
+  #mceu_11,
+  #mceu_12 {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=press-this.css.map */
