--- a/content/themes/twentyseventeen/assets/css/ie8.css
+++ b/content/themes/twentyseventeen/assets/css/ie8.css
@@ -3,6 +3,9 @@ Theme Name: Twenty Seventeen
 Description: IE8 specific style.
 */
 
+body {
+	font-size: 16px;
+}
 
 h1 {
 	font-size: 30px;
@@ -35,13 +38,74 @@ h6 {
 	font-size: 1rem;
 }
 
+img {
+	width: inherit;  /* Make images fill their parent's space. */
+}
+
+/* Fixes linked images */
+.entry-content a img,
+.widget a img {
+	filter: progid:DXImageTransform.Microsoft.DropShadow(OffX=0, OffY=5, Color=#ffffff);
+}
+
+/* Layout */
+
+.site-content {
+	padding: 6.5em 0 0;
+}
+
 /* Site Branding */
 
+.custom-header {
+	overflow: hidden;
+}
+
+.has-header-image.twentyseventeen-front-page .custom-header,
+.has-header-image.home.blog .custom-header {
+	display: block;
+}
+
+.custom-header-image {
+	background-position: bottom center;
+}
+
+.site-branding {
+	padding: 45px 0;
+}
+
+.has-header-image.twentyseventeen-front-page .site-branding,
+.has-header-image.home.blog .site-branding {
+	bottom: 0;
+	display: block;
+	left: 0;
+	height: auto;
+	padding-top: 0;
+	position: absolute;
+	width: 100%;
+}
+
+.has-header-image .custom-header-image img,
+.has-header-image .custom-header-image video {
+	left: 0;
+	top: 0;
+}
+
 .site-title {
+	font-size: 36px;
 	font-weight: bolder;
 }
 
+.site-description {
+	font-size: 16px;
+}
+
 /* Main Navigation */
+
+.navigation-top {
+	background: #fff;
+	position: relative;
+	z-index: 10;
+}
 
 .menu-toggle {
 	width: 150px;
@@ -52,21 +116,42 @@ h6 {
 	padding: 0;
 }
 
-.dropdown-toggle .svg-fallback.icon-expand {
+.no-svg .dropdown-toggle {
+	padding: 0.25em 0 0;
+}
+
+.no-svg .dropdown-toggle.toggled-on {
+	padding: 0.75em 0 0;
+}
+
+.dropdown-toggle .svg-fallback.icon-angle-down {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=-1, M12=1.2246467991473532e-16, M21=-1.2246467991473532e-16, M22=-1, SizingMethod='auto expand')";
 }
 
-.dropdown-toggle.toggled-on .svg-fallback.icon-expand {
+.dropdown-toggle.toggled-on .svg-fallback.icon-angle-down {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0, M21=0, M22=1, SizingMethod='auto expand')";
 }
 
 /* Front Page */
 
-.custom-header-image,
+.twentyseventeen-front-page.has-header-image .custom-header,
+.blog.home.has-header-image .custom-header,
 .panel-image {
-	height: 1000px;
-	max-height: 1000px;
+	height: 800px;
+	max-height: 800px;
 	padding-top: 0;
+}
+
+.twentyseventeen-front-page .custom-header-image,
+.blog.home .custom-header-image {
+	background-position: center center;
+}
+
+.twentyseventeen-front-page.has-header-image .site-branding,
+.home.blog.has-header-image .site-branding {
+	bottom: 20px;
+	position: absolute;
+	width: 100%;
 }
 
 .page .panel-content .entry-title,
@@ -81,6 +166,12 @@ h6 {
 
 /* Posts */
 
+.blog .site-main > article,
+.archive .site-main > article,
+.search .site-main > article {
+	padding-bottom: 4em;
+}
+
 time.updated {
 	display: none;
 }
@@ -93,23 +184,43 @@ time.published {
 	padding-top: 0;
 }
 
-.blog .post,
-.archive .post,
-.search .post,
-.search .page {
-	padding-bottom: 4em;
+.single-post .entry-title,
+.page .entry-title,
+.entry-meta + .entry-title {
+	font-size: 26px;
+	font-weight: normal;
+	letter-spacing: normal;
+	padding-top: 0;
+	text-transform: none;
+}
+
+.entry-footer .cat-links,
+.entry-footer .tags-links {
+	padding-left: 0;
 }
 
 .comment-author .avatar {
 	z-index: -1;
 }
 
-img {
-	width: inherit;  /* Make images fill their parent's space. */
+ol.children .children {
+	padding-left: 2em;
 }
 
-/* Fixes linked images */
-.entry-content a img,
-.widget a img {
-	filter: progid:DXImageTransform.Microsoft.DropShadow(OffX=0, OffY=5, Color=#fff);
+/* RTL Styles */
+
+.rtl .has-header-image.twentyseventeen-front-page .site-branding,
+.rtl .has-header-image.home.blog .site-branding {
+	left: auto;
+	right: 0;
+}
+
+.rtl .entry-footer .cat-links,
+.rtl .entry-footer .tags-links {
+	padding-right: 0;
+}
+
+.rtl ol.children .children {
+	padding-left: 0;
+	padding-right: 2em;
 }
