--- a/content/themes/twentyseventeen/rtl.css
+++ b/content/themes/twentyseventeen/rtl.css
@@ -33,19 +33,22 @@ textarea {
 	padding-right: 3px;
 }
 
-ol {
-	counter-reset: item;
-}
-
-ol li:before {
-	left: auto;
-	right: -1.5em;
-}
-
 li > ul,
 li > ol {
 	margin-left: 0;
 	margin-right: 1.5em;
+}
+
+th:first-child,
+td:first-child {
+	padding-left: 0.4em;
+	padding-right: 0;
+}
+
+th:last-child,
+td:last-child {
+	padding-left: 0;
+	padding-right: 0.4em;
 }
 
 /* Forms */
@@ -111,9 +114,9 @@ input[type="checkbox"] {
 	margin-right: 0;
 }
 
-.sticky .icon-pinned {
+.sticky .icon-thumb-tack {
 	left: auto;
-	right: -1em;
+	right: -1.5em;
 }
 
 .prev.page-numbers .icon,
@@ -130,6 +133,16 @@ input[type="checkbox"] {
 
 .next.page-numbers {
 	float: left;
+}
+
+.nav-links .nav-previous .nav-title .nav-title-icon-wrapper {
+	margin-left: 0.5em;
+	margin-right: 0;
+}
+
+.nav-links .nav-next .nav-title .nav-title-icon-wrapper {
+	margin-left: 0;
+	margin-right: 0.5em;
 }
 
 /* Blog Entries */
@@ -246,6 +259,13 @@ input[type="checkbox"] {
 	text-align: right;
 }
 
+/* SVG Fallback */
+
+.no-svg .dropdown-toggle {
+	left: 0;
+	right: auto;
+}
+
 /* Media queries */
 
 @media screen and (min-width: 48em) {
@@ -333,6 +353,11 @@ input[type="checkbox"] {
 		right: auto;
 	}
 
+	.site-header .menu-scroll-down {
+		left: 0;
+		right: auto;
+	}
+
 	.entry-title a {
 		margin-left: auto;
 		margin-right: -2px;
@@ -357,23 +382,24 @@ input[type="checkbox"] {
 
 	/* Blog, Archive, Search */
 
-	.sticky .icon-pinned {
+	.sticky .icon-thumb-tack {
 		left: auto;
 		right: -2.5em;
 	}
 
-	body:not(.has-sidebar) .page-header,
+	body:not(.has-sidebar):not(.page-one-column) .page-header,
 	body.has-sidebar.error404 #primary .page-header,
-	body.page-two-column #primary .entry-header {
+	body.page-two-column:not(.archive) #primary .entry-header,
+	body.page-two-column.archive:not(.has-sidebar) #primary .page-header {
 		float: right;
 	}
 
 	.blog:not(.has-sidebar) #primary article,
-	.archive:not(.has-sidebar) #primary article,
+	.archive:not(.has-sidebar):not(.page-one-column) #primary article,
 	.search:not(.has-sidebar) #primary article,
 	.has-sidebar.error404 #primary .page-content,
 	.error404.has-sidebar #primary .page-content,
-	body.page-two-column #primary .entry-content,
+	body.page-two-column:not(.archive) #primary .entry-content,
 	body.page-two-column #comments {
 		float: left;
 	}
@@ -432,7 +458,8 @@ input[type="checkbox"] {
 		float: left;
 	}
 
-	.has-sidebar .navigation.pagination {
+	.has-sidebar .navigation.pagination,
+	.archive.page-one-column:not(.has-sidebar) .navigation.pagination {
 		float: none;
 	}
 
@@ -489,17 +516,17 @@ input[type="checkbox"] {
 	}
 }
 
-@media screen and ( min-width: 67em ) {
+@media screen and (min-width: 67em) {
 
 	/* Sticky posts */
 
-	.sticky .icon-pinned {
+	.sticky .icon-thumb-tack {
 		left: auto;
 		right: -1.25em;
 	}
 }
 
-@media screen and ( min-width: 79em ) {
+@media screen and (min-width: 79em) {
 
 	.has-sidebar #primary .entry-content blockquote.alignright,
 	.has-sidebar #primary .entry-content blockquote.alignright.below-entry-meta {
