--- a/content/themes/jeremyfelt/style.css
+++ b/content/themes/jeremyfelt/style.css
@@ -3,6 +3,6 @@
  Theme URI:      https://jeremyfelt.com
  Description:    A child theme for jeremyfelt.com using whatever active parent.
  Author:         jeremyfelt
- Template:       resonar
+ Template:       twentyseventeen
  Version:        9.79
 */
