--- a/content/themes/writemore/style.css
+++ b/content/themes/writemore/style.css
@@ -383,6 +383,17 @@ footer.site-footer {
 	text-align: center;
 }
 
+.widget-area {
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #eee;
+	justify-content: center;
+}
+
+.widget-area section {
+	width: calc(100vw/3);
+	padding: 0 1em;
+}
+
 .wrapper {
 	display: grid;
 	grid-template-columns: [full-start gutter1-start] 250px
@@ -392,6 +403,12 @@ footer.site-footer {
 }
 
 @media screen and (max-width: 640px) {
+	.wrapper {
+		display: grid;
+		grid-template-columns: [full-start] 100vw [full-end];
+		width: 100vw;
+	}
+
 	.site-branding {
 		flex-direction: column;
 		margin-bottom: .5em;
@@ -438,8 +455,18 @@ footer.site-footer {
 
 	article.post {
 		grid-column: full;
+		width: 100%;
 		margin: 0 auto 5em auto;
 		padding: 0 1em;
+	}
+
+	.entry-footer,
+	.single .entry-footer,
+	.single .post-navigation {
+		margin-left: -1em;
+		margin-right: -1em;
+		padding-left: 1em;
+		padding-right: 1em;
 	}
 
 	.archive .page-title {
@@ -459,6 +486,16 @@ footer.site-footer {
 		font-size: 0;
 		height: 1rem;
 		width: 100%;
+	}
+
+	aside.widget-area {
+		flex-direction: column;
+	}
+
+	.widget-area section {
+		width: 100%;
+		padding: 0 1em;
+		margin: 1em 0 0 0;
 	}
 }
 
@@ -1144,17 +1181,6 @@ object {
 
 .gallery-caption {
 	display: block;
-}
-
-
-.widget-area {
-	border-top: 1px solid #ddd;
-	border-bottom: 1px solid #eee;
-	justify-content: center;
-}
-.widget-area section {
-	width: calc(100vw/3);
-	padding: 0 1em;
 }
 
 .widget {
